--- a/social_buttons/index.html
+++ b/social_buttons/index.html
@@ -69,14 +69,15 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
     </div>
 </header><nav class="navbar navbar-expand-md navbar-light bg-white static-top"><div class="collapse navbar-collapse bs-nav-collapsible" id="bs-navbar">
             <ul class="navbar-nav nav-fill d-flex w-100">
-<li class="nav-item">
-<a href="../archive.html" class="nav-link">Archive</a>
+<li class="nav-item dropdown">
+<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
+            <div class="dropdown-menu">
+                    <a href="../archive.html" class="dropdown-item">Archive</a>
+                    <a href="../categories/" class="dropdown-item">Tags</a>
+            </div>
                 </li>
 <li class="nav-item">
-<a href="../categories/" class="nav-link">Tags</a>
-                </li>
-<li class="nav-item">
-<a href="../rss.xml" class="nav-link">RSS feed</a>
+<a href="../contact-us/" class="nav-link">Contact</a>
 
                 
             </li>
@@ -117,19 +118,19 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
 </ul></nav><section id="the-default"><h2><a class="toc-backref" href="#toc-entry-1" role="doc-backlink">The Default</a></h2>
 <p>By Default, the themes provided with Nikola will add to your pages a "slide in" widget at
 the bottom right of the page, provided by Addthis. This is the HTML code for that:</p>
-<pre class="code html"><a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-1" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-2" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-2"></a><span class="p">&lt;</span><span class="nt">div</span> <span class="na">id</span><span class="o">=</span><span class="s">"addthisbox"</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-3" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-4" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-4"></a><span class="p">&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_more"</span><span class="p">&gt;</span>Share<span class="p">&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-5" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-5"></a><span class="p">&lt;</span><span class="nt">ul</span><span class="p">&gt;&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_facebook"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-6" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-6"></a><span class="p">&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-7" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-7"></a><span class="p">&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_linkedin"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-8" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-8"></a><span class="p">&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_twitter"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-9" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-9"></a><span class="p">&lt;/</span><span class="nt">ul</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-10" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-10"></a><span class="p">&lt;/</span><span class="nt">div</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-11" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-11"></a><span class="p">&lt;</span><span class="nt">script</span> <span class="na">src</span><span class="o">=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="p">&gt;&lt;/</span><span class="nt">script</span><span class="p">&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-12" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
-<a id="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-13" name="rest_code_f3146ae581ec49d5b46f05bc862c0fb2-13"></a>"""
+<pre class="code html"><a id="rest_code_9a568fbe2e05445897d6325dc0db6def-1" name="rest_code_9a568fbe2e05445897d6325dc0db6def-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-2" name="rest_code_9a568fbe2e05445897d6325dc0db6def-2"></a><span class="p">&lt;</span><span class="nt">div</span> <span class="na">id</span><span class="o">=</span><span class="s">"addthisbox"</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-3" name="rest_code_9a568fbe2e05445897d6325dc0db6def-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-4" name="rest_code_9a568fbe2e05445897d6325dc0db6def-4"></a><span class="p">&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_more"</span><span class="p">&gt;</span>Share<span class="p">&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-5" name="rest_code_9a568fbe2e05445897d6325dc0db6def-5"></a><span class="p">&lt;</span><span class="nt">ul</span><span class="p">&gt;&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_facebook"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-6" name="rest_code_9a568fbe2e05445897d6325dc0db6def-6"></a><span class="p">&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-7" name="rest_code_9a568fbe2e05445897d6325dc0db6def-7"></a><span class="p">&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_linkedin"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-8" name="rest_code_9a568fbe2e05445897d6325dc0db6def-8"></a><span class="p">&lt;</span><span class="nt">li</span><span class="p">&gt;&lt;</span><span class="nt">a</span> <span class="na">class</span><span class="o">=</span><span class="s">"addthis_button_twitter"</span><span class="p">&gt;&lt;/</span><span class="nt">a</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-9" name="rest_code_9a568fbe2e05445897d6325dc0db6def-9"></a><span class="p">&lt;/</span><span class="nt">ul</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-10" name="rest_code_9a568fbe2e05445897d6325dc0db6def-10"></a><span class="p">&lt;/</span><span class="nt">div</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-11" name="rest_code_9a568fbe2e05445897d6325dc0db6def-11"></a><span class="p">&lt;</span><span class="nt">script</span> <span class="na">src</span><span class="o">=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="p">&gt;&lt;/</span><span class="nt">script</span><span class="p">&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-12" name="rest_code_9a568fbe2e05445897d6325dc0db6def-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
+<a id="rest_code_9a568fbe2e05445897d6325dc0db6def-13" name="rest_code_9a568fbe2e05445897d6325dc0db6def-13"></a>"""
 </pre>
 <p>You can change that using the <code class="docutils literal">SOCIAL_BUTTONS_CODE</code> option in your conf.py. In some cases, just
 doing that will be enough but in others, it won't. This document tries to describe all the bits
@@ -179,20 +180,20 @@ site and open a web browser showing the default configuration, with the AddThis 
 <pre class="literal-block">$ nikola auto -b</pre>
 <p>First, let's add the HTML snippet that will show the sharing options. In your conf.py, set this, which
 is the HTML code suggested by ShareNice:</p>
-<pre class="code python"><a id="rest_code_37502e14d03843f1938ab342fce081cc-1" name="rest_code_37502e14d03843f1938ab342fce081cc-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s2">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a id="rest_code_37502e14d03843f1938ab342fce081cc-2" name="rest_code_37502e14d03843f1938ab342fce081cc-2"></a><span class="s2">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a id="rest_code_37502e14d03843f1938ab342fce081cc-3" name="rest_code_37502e14d03843f1938ab342fce081cc-3"></a><span class="s2">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
-<a id="rest_code_37502e14d03843f1938ab342fce081cc-4" name="rest_code_37502e14d03843f1938ab342fce081cc-4"></a><span class="s2">    style="float:right"&gt;&lt;/div&gt;"""</span>
-<a id="rest_code_37502e14d03843f1938ab342fce081cc-5" name="rest_code_37502e14d03843f1938ab342fce081cc-5"></a>
-<a id="rest_code_37502e14d03843f1938ab342fce081cc-6" name="rest_code_37502e14d03843f1938ab342fce081cc-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s2">"""&lt;script src="https://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
+<pre class="code python"><a id="rest_code_b8d466932da34ab9bd93c3872b67ca90-1" name="rest_code_b8d466932da34ab9bd93c3872b67ca90-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s2">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a id="rest_code_b8d466932da34ab9bd93c3872b67ca90-2" name="rest_code_b8d466932da34ab9bd93c3872b67ca90-2"></a><span class="s2">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a id="rest_code_b8d466932da34ab9bd93c3872b67ca90-3" name="rest_code_b8d466932da34ab9bd93c3872b67ca90-3"></a><span class="s2">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
+<a id="rest_code_b8d466932da34ab9bd93c3872b67ca90-4" name="rest_code_b8d466932da34ab9bd93c3872b67ca90-4"></a><span class="s2">    style="float:right"&gt;&lt;/div&gt;"""</span>
+<a id="rest_code_b8d466932da34ab9bd93c3872b67ca90-5" name="rest_code_b8d466932da34ab9bd93c3872b67ca90-5"></a>
+<a id="rest_code_b8d466932da34ab9bd93c3872b67ca90-6" name="rest_code_b8d466932da34ab9bd93c3872b67ca90-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s2">"""&lt;script src="https://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
 </pre>
 <p>And you should now see a sharing box at the bottom right of the page.</p>
 <p>Main problem remaining is that it doesn't really look good and integrated in the page layout.
 I suggest changing the code to this which looks nicer, but still has some placement issues:</p>
-<pre class="code python"><a id="rest_code_29fe6513d9004b8f890e30032efb1e69-1" name="rest_code_29fe6513d9004b8f890e30032efb1e69-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s2">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a id="rest_code_29fe6513d9004b8f890e30032efb1e69-2" name="rest_code_29fe6513d9004b8f890e30032efb1e69-2"></a><span class="s2">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a id="rest_code_29fe6513d9004b8f890e30032efb1e69-3" name="rest_code_29fe6513d9004b8f890e30032efb1e69-3"></a><span class="s2">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
-<a id="rest_code_29fe6513d9004b8f890e30032efb1e69-4" name="rest_code_29fe6513d9004b8f890e30032efb1e69-4"></a><span class="s2">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a id="rest_code_79d8814f2034479f9cbd5b1fd2980e61-1" name="rest_code_79d8814f2034479f9cbd5b1fd2980e61-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s2">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a id="rest_code_79d8814f2034479f9cbd5b1fd2980e61-2" name="rest_code_79d8814f2034479f9cbd5b1fd2980e61-2"></a><span class="s2">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a id="rest_code_79d8814f2034479f9cbd5b1fd2980e61-3" name="rest_code_79d8814f2034479f9cbd5b1fd2980e61-3"></a><span class="s2">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
+<a id="rest_code_79d8814f2034479f9cbd5b1fd2980e61-4" name="rest_code_79d8814f2034479f9cbd5b1fd2980e61-4"></a><span class="s2">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>If anyone comes up with a better idea of styling/placement, just let me know ;-)</p>
 <p>One bad bit of this so far is that you are now using a script from another site, and that
@@ -229,16 +230,16 @@ $ sh build.sh -m gplus,twitter,facebook,mail -s "/assets/css/socialshareprivacy.
 <pre class="literal-block">$ cp -Rv SocialSharePrivacy-master/build/* files/
 $ cp -R SocialSharePrivacy-master/images/ files/assets/</pre>
 <p>Edit your <code class="docutils literal">conf.py</code>:</p>
-<pre class="code python"><a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-1" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s2">"""</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-2" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-2"></a><span class="s2">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-3" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-3"></a><span class="s2">&lt;script&gt;</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-4" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-4"></a><span class="s2">$(document).ready(function () {</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-5" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-5"></a><span class="s2">    $('.share').socialSharePrivacy();</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-6" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-6"></a><span class="s2">});</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-7" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-7"></a><span class="s2">&lt;/script&gt;</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-8" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-8"></a><span class="s2">"""</span>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-9" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-9"></a>
-<a id="rest_code_131d31dfbfe9425690c638fce0e32ab1-10" name="rest_code_131d31dfbfe9425690c638fce0e32ab1-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s2">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a id="rest_code_c068435eb90c438095dc0bdffc23b94e-1" name="rest_code_c068435eb90c438095dc0bdffc23b94e-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s2">"""</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-2" name="rest_code_c068435eb90c438095dc0bdffc23b94e-2"></a><span class="s2">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-3" name="rest_code_c068435eb90c438095dc0bdffc23b94e-3"></a><span class="s2">&lt;script&gt;</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-4" name="rest_code_c068435eb90c438095dc0bdffc23b94e-4"></a><span class="s2">$(document).ready(function () {</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-5" name="rest_code_c068435eb90c438095dc0bdffc23b94e-5"></a><span class="s2">    $('.share').socialSharePrivacy();</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-6" name="rest_code_c068435eb90c438095dc0bdffc23b94e-6"></a><span class="s2">});</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-7" name="rest_code_c068435eb90c438095dc0bdffc23b94e-7"></a><span class="s2">&lt;/script&gt;</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-8" name="rest_code_c068435eb90c438095dc0bdffc23b94e-8"></a><span class="s2">"""</span>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-9" name="rest_code_c068435eb90c438095dc0bdffc23b94e-9"></a>
+<a id="rest_code_c068435eb90c438095dc0bdffc23b94e-10" name="rest_code_c068435eb90c438095dc0bdffc23b94e-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s2">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>In my experience this produces a broken, duplicate, semi-working thing. YMMV and if you make it work correctly, let me know how :-)</p>
 </section><section id="the-easy-way"><h3><a class="toc-backref" href="#toc-entry-5" role="doc-backlink">The Easy Way</a></h3>
