Nikola auto commit.
Source commit: 11d8769ca7edf5631300875c3ee9cb569ff93ef0
Nikola version: 8.2.0

--- a/listings/index.html
+++ b/listings/index.html
@@ -119,14 +119,9 @@
             <a class="menu-button" href="#"><span class="burger">☰</span><span class="word">Menu</span></a>
         </nav></header><main id="content" class="content" role="main"><nav class="breadcrumbs"><ul class="breadcrumb">
 <li><a href=".">listings</a></li>
-</ul></nav><ul>
-<li>
-<a href="__pycache__" class="listing-folder">__pycache__</a>
-    </li>
-<li>
+</ul></nav><ul><li>
 <a href="hello.py.html" class="listing-file">hello.py</a>
-</li>
-</ul></main><footer class="site-footer clearfix"><section class="poweredby">Contents © 2022         <a href="mailto:hello@steveharris.me">Steve Harris</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </section></footer>
+</li></ul></main><footer class="site-footer clearfix"><section class="poweredby">Contents © 2022         <a href="mailto:hello@steveharris.me">Steve Harris</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </section></footer>
 </div>
 
     <script type="text/javascript" src="../assets/js/jquery.js"></script><script type="text/javascript" src="../assets/js/jquery.fitvids.js"></script><script type="text/javascript" src="../assets/js/index.js"></script>
