--- a/archive.html
+++ b/archive.html
@@ -115,21 +115,16 @@
 <span class="nav-cover"></span>
 
 <div class="site-wrapper">
-    <header class="main-header post-head no-cover"><nav class="main-nav overlay clearfix"><a class="blog-logo" href="https://docsteveharris.github.io/uclhal/"><img src="images/logo-uclhalv5.png" alt="Blog Logo"></a>
+    <header class="main-header post-head no-cover"><nav class="main-nav overlay clearfix"><a class="blog-logo" href="https://docsteveharris.github.io/uclhal/"><img src="https://docsteveharris.github.io/uclhal/images/logo-uclhalv5.png" alt="Blog Logo"></a>
             <a class="menu-button" href="#"><span class="burger">☰</span><span class="word">Menu</span></a>
         </nav></header><main id="content" class="content" role="main"><article class="listpage"><header><h1>Archive</h1>
-    </header><ul class="postlist">
-<li>
+    </header><ul class="postlist"><li>
 <a href="2021/">2021</a>
             (1)
-        </li>
-<li>
-<a href="2012/">2012</a>
-            (1)
-    </li>
-</ul></article></main><footer class="site-footer clearfix"><section class="poweredby">Contents © 2022         <a href="mailto:hello@steveharris.me">Steve Harris</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </section></footer>
+    </li></ul></article></main><footer class="site-footer clearfix"><section class="poweredby">Contents © 2022         <a href="mailto:hello@steveharris.me">Steve Harris</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         </section></footer>
 </div>
 
     <script type="text/javascript" src="assets/js/jquery.js"></script><script type="text/javascript" src="assets/js/jquery.fitvids.js"></script><script type="text/javascript" src="assets/js/index.js"></script>
 </body>
 </html>
+
