--- a/claire-black/index.html
+++ b/claire-black/index.html
@@ -122,7 +122,7 @@ WIP">
 <span class="nav-cover"></span>
 
 <div class="site-wrapper">
-    <header class="main-header post-head no-cover"><nav class="main-nav overlay clearfix"><a class="blog-logo" href="https://docsteveharris.github.io/uclhal/"><img src="images/logo-uclhalv5.png" alt="Blog Logo"></a>
+    <header class="main-header post-head no-cover"><nav class="main-nav overlay clearfix"><a class="blog-logo" href="https://docsteveharris.github.io/uclhal/"><img src="https://docsteveharris.github.io/uclhal/images/logo-uclhalv5.png" alt="Blog Logo"></a>
             <a class="menu-button" href="#"><span class="burger">☰</span><span class="word">Menu</span></a>
         </nav></header><main id="content" class="content" role="main"><article class="post-text storypage" itemscope="itemscope" itemtype="http://schema.org/Article"><header><h1 class="p-name entry-title" itemprop="headline name"><a href="." class="u-url">Claire Black</a></h1>
 
@@ -141,3 +141,4 @@ WIP">
     <script type="text/javascript" src="../assets/js/jquery.js"></script><script type="text/javascript" src="../assets/js/jquery.fitvids.js"></script><script type="text/javascript" src="../assets/js/index.js"></script>
 </body>
 </html>
+
