--- a/pr-preview/pr-47/people.html
+++ b/pr-preview/pr-47/people.html
@@ -188,10 +188,6 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Resources</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./awesome.html">
- <span class="menu-text">Awesome</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link" href="./opportunities.html">
  <span class="menu-text">Opportunities</span></a>
   </li>  
@@ -225,7 +221,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="research-staff">Research Staff</h2>
 <div id="listing-research-staff" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-2">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1668599844477" data-listing-reading-time-sort="0.74">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.74">
 <a href="./people/staff/harris_steve.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -252,7 +248,7 @@ No matching items
 <h2 class="anchored" data-anchor-id="research-assistants">Research Assistants</h2>
 <div id="listing-research-assistants" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1668599844441" data-listing-reading-time-sort="0.545">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1668602109628" data-listing-reading-time-sort="0.545">
 <a href="./people/ras/alhindawi_ahmed.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -281,7 +277,7 @@ Started
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1668599844441" data-listing-reading-time-sort="0.18">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1668602109628" data-listing-reading-time-sort="0.18">
 <a href="./people/ras/claire_black.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -310,7 +306,7 @@ Ages ago
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1668599844473" data-listing-reading-time-sort="0.535">
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1668602109656" data-listing-reading-time-sort="0.535">
 <a href="./people/ras/ruaraidh_campbell.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -339,7 +335,7 @@ August 2022
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1668599844441" data-listing-reading-time-sort="0.705">
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1668602109628" data-listing-reading-time-sort="0.705">
 <a href="./people/ras/catling_finn.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -368,11 +364,11 @@ October 2020
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1668599844477" data-listing-reading-time-sort="0.785">
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.785">
 <a href="./people/ras/thomasfrostpage.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
-<img src="./people/ras/placeholder.jpg" class="thumbnail-image card-img" style="height: 225px;">
+<img src="./people/ras/thomasfrost.jpg" class="thumbnail-image card-img" style="height: 225px;">
 </p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
@@ -397,7 +393,7 @@ September 2022
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1668599844457" data-listing-reading-time-sort="1.53">
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1668602109644" data-listing-reading-time-sort="1.53">
 <a href="./people/ras/kohler_katharina.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -426,7 +422,7 @@ September 2022
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1668599844469" data-listing-reading-time-sort="0.7">
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1668602109656" data-listing-reading-time-sort="0.7">
 <a href="./people/ras/rashan_aasiyah.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <div class="card-img-bg" style="height: 225px;">
@@ -455,7 +451,7 @@ September 2020
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1668599844477" data-listing-reading-time-sort="0.77">
+<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.77">
 <a href="./people/ras/tomlinson_chris.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -484,7 +480,7 @@ September 2020
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1668599844441" data-listing-reading-time-sort="0.635">
+<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1668602109628" data-listing-reading-time-sort="0.635">
 <a href="./people/ras/hrishee.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -513,7 +509,7 @@ August 2022
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1668599844477" data-listing-reading-time-sort="0.645">
+<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.645">
 <a href="./people/ras/vaughan_sarah.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -542,7 +538,7 @@ August 2022
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="10" data-listing-file-modified-sort="1668599844477" data-listing-reading-time-sort="0.71">
+<div class="g-col-1" data-index="10" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.71">
 <a href="./people/ras/wilson_matt.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-center">
 <p class="card-img-top">
@@ -624,7 +620,7 @@ No matching items
 </tr>
 </thead>
 <tbody class="list">
-<tr data-index="0" data-listing-file-modified-sort="1668599844437" data-listing-reading-time-sort="0.315" data-listing-title-sort="Danny Wong" data-listing-filename-sort="wong_danny.qmd">
+<tr data-index="0" data-listing-file-modified-sort="1668602109624" data-listing-reading-time-sort="0.315" data-listing-title-sort="Danny Wong" data-listing-filename-sort="wong_danny.qmd">
 <td class="listing-title">
 <a href="./people/alumni/wong_danny.html" class="title">Danny Wong</a>
 </td>
