--- a/pr-preview/pr-47/people/ras/thomasfrostpage.html
+++ b/pr-preview/pr-47/people/ras/thomasfrostpage.html
@@ -101,10 +101,6 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Resources</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="../../awesome.html">
- <span class="menu-text">Awesome</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link" href="../../opportunities.html">
  <span class="menu-text">Opportunities</span></a>
   </li>  
@@ -137,7 +133,7 @@ ul.task-list li input[type="checkbox"] {
   </ol>
 </nav>
 <div class="quarto-about-jolla">
-  <img src="placeholder.jpg" class="about-image
+  <img src="thomasfrost.jpg" class="about-image
   round " style="height: 15em; width: 15em;">
  <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
