Deploy preview for PR 47 🛫

--- a/pr-preview/pr-47/resources.html
+++ b/pr-preview/pr-47/resources.html
@@ -150,7 +150,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="datasets">datasets <span class="quarto-category-count">(1)</span></div><div class="category" data-category="external-resources">external-resources <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="datasets">datasets <span class="quarto-category-count">(1)</span></div><div class="category" data-category="external-resources">external-resources <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -205,7 +205,38 @@ Categories
 </tr>
 </thead>
 <tbody class="list">
-<tr data-index="0" data-categories="datasets" data-listing-date-sort="1668556800000" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.065" data-listing-title-sort="CCHIC" data-listing-filename-sort="CCHIC.qmd">
+<tr data-index="0" data-listing-file-modified-sort="1668604693075" data-listing-reading-time-sort="7.695" data-listing-title-sort="Data Clinic - For Data Fellows" data-listing-filename-sort="data-clinic-for-fellows.qmd">
+<td class="listing-title">
+<a href="./resources/data-clinic/data-clinic-for-fellows.html" class="title">Data Clinic - For Data Fellows</a>
+</td>
+<td class="listing-description">
+The Data Clinic is a Quality Improvement initiative to help frontline healthcare workers in Critical Care get data from EPIC.
+</td>
+<td class="listing-categories">
+</td>
+</tr>
+<tr data-index="1" data-listing-file-modified-sort="1668604693075" data-listing-reading-time-sort="3.77" data-listing-title-sort="Data Clinic - For General Staff" data-listing-filename-sort="data-clinic-for-general.qmd">
+<td class="listing-title">
+<a href="./resources/data-clinic/data-clinic-for-general.html" class="title">Data Clinic - For General Staff</a>
+</td>
+<td class="listing-description">
+The Data…
+</td>
+<td class="listing-categories">
+</td>
+</tr>
+<tr data-index="2" data-categories="external-resources" data-listing-date-sort="1668556800000" data-listing-file-modified-sort="1668604693075" data-listing-reading-time-sort="0.3" data-listing-title-sort="Healthyr: R for Health Data Science" data-listing-filename-sort="Healthyr.qmd">
+<td class="listing-title">
+<a href="./resources/external-resources/Healthyr.html" class="title">Healthyr: R for Health Data Science</a>
+</td>
+<td class="listing-description">
+Free online learning resource for R. Designed for healthcare professionals.
+</td>
+<td class="listing-categories">
+external-resources
+</td>
+</tr>
+<tr data-index="3" data-categories="datasets" data-listing-date-sort="1668556800000" data-listing-file-modified-sort="1668604693075" data-listing-reading-time-sort="0.065" data-listing-title-sort="CCHIC" data-listing-filename-sort="CCHIC.qmd">
 <td class="listing-title">
 <a href="./resources/datasets/CCHIC.html" class="title">CCHIC</a>
 </td>
@@ -214,17 +245,6 @@ Categories
 </td>
 <td class="listing-categories">
 datasets
-</td>
-</tr>
-<tr data-index="1" data-categories="external-resources" data-listing-date-sort="1668556800000" data-listing-file-modified-sort="1668602109664" data-listing-reading-time-sort="0.3" data-listing-title-sort="Healthyr: R for Health Data Science" data-listing-filename-sort="Healthyr.qmd">
-<td class="listing-title">
-<a href="./resources/external/Healthyr.html" class="title">Healthyr: R for Health Data Science</a>
-</td>
-<td class="listing-description">
-Free online learning resource for R. Designed for healthcare professionals.
-</td>
-<td class="listing-categories">
-external-resources
 </td>
 </tr>
 </tbody>
