Deploy preview for PR 76 🛫

--- a/pr-preview/pr-76/index.html
+++ b/pr-preview/pr-76/index.html
@@ -136,7 +136,13 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 <div class="lead">
-<p>We work on translational data science for <span class="fw-bolder">critical care</span> and related specialties.</p>
+<p>We work on translational data science for <span class="fw-bolder">critical care</span> and related specialties. We bring together four interrelated disciplines within the lab:</p>
+<ol type="1">
+<li>Machines and Robots</li>
+<li>Learning Healthcare Systems via nudge randomisation</li>
+<li>Algorithm stewardship and real world / real time decision support</li>
+<li>Collaborative data science and national level epidemiology</li>
+</ol>
 </div>
 <!-- ![](./img/showcase.svg){.hero} -->
 <section id="opportunities" class="level2">
